k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkride-shuma-frontend
  namespace: checkride-shuma-f    # 追加
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: app-instance
      app.kubernetes.io/name: app
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: app-instance
        app.kubernetes.io/name: app
    spec:
      serviceAccountName: build-bot       # 追加
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      schedulerName: default-scheduler
      containers:
      - name: checkride-shuma-frontend
        image: checkride-shuma-f:latest
        ports:
        - name: http
          protocol: TCP
          containerPort: 80
        resources: {}
        livenessProbe:
          failureThreshold: 3
          httpGet:
            port: http
            path: /
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          httpGet:
            port: http
            path: /
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        imagePullPolicy: Always
      imagePullSecrets:
      - name: sh-m-04-pull-secret
      securityContext: {}
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
